# ExtraCreditLab4

./: BrightnessandControl.cpp  BrightnessandControl.h  CMakeLists.txt  Convultion.cpp  Convultion.h  DrawingModule.cpp  DrawingModule.h  GammaCorrection.cpp  GammaCorrection.h  Image.cpp  Image.h  ImageProcessing.h  Poza1.ascii.pgm  README.md  Rectangle.cpp  main.cpp
ExtraCreditLab4/: BrightnessandControl.cpp  CMakeLists.txt  ImageProcessing.cpp  Point.cpp  Point.h  Rectangle.h  Size.cpp  Size.h
